--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <P><STRONG>Date Modified: </STRONG>6/19/2023</P>
 
 <P>This is a prototype for a St. Andrew Memorial web page.</P>
-<P><a href="st_andrew_memorials/alist_church_memorials.html">Go to prototype with pdf files</a></P>
+<P><a href="alist_church_memorials.html">Go to prototype with pdf files</a></P>
 <P><a href="moms_histories/moms_histories_index.html">Moms_Histories</a></P>
 
 </body>
