--- a/alist_church_memorials.html
+++ b/alist_church_memorials.html
@@ -16,8 +16,11 @@
 	<script language="JavaScript">
 	
 	LoadMemorialInformation ();
+	
+	gRandomSelectedSlide = GetRandomMemorialFile ();
 
-	SetMemorialFileVariables(FirstSlide);
+	//SetMemorialFileVariables (FirstSlide);
+	SetMemorialFileVariables (gRandomSelectedSlide);
 
 	</script>
 </head>
