--- a/alist_church_memorials.html
+++ b/alist_church_memorials.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8" />
-	<meta http-equiv="refresh" content="0; url=https://andrew-umc.github.io/alist_church_memorials.html" />
+	<meta http-equiv="refresh" content="0; url=https://andrew-umc.github.io/st_andrew_memorials.html" />
 <body>
 </body>
 </html>
